<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.ksoot.spark</groupId>
    <artifactId>spring-boot-spark-kubernetes</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>spring-boot-spark-kubernetes</name>
    <packaging>pom</packaging>

    <modules>
        <module>spark-job-commons</module>
        <module>spark-batch-daily-sales-report-job</module>
        <module>spark-stream-logs-analysis-job</module>
        <module>spark-job-service</module>
    </modules>

    <properties>
        <!-- Framework versions-->
        <java.version>17</java.version>
        <spring-boot.version>3.4.0</spring-boot.version>
        <spring-cloud.version>2023.0.4</spring-cloud.version>
        <spring-cloud-aws.version>3.2.0</spring-cloud-aws.version>
        <aws-java-sdk.version>2.28.28</aws-java-sdk.version>

        <!-- Misc dependency versions-->
        <springdoc-openapi-starter-webmvc-ui.version>2.7.0</springdoc-openapi-starter-webmvc-ui.version>
        <spring-boot-problem-handler.version>1.9</spring-boot-problem-handler.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-text.version>1.10.0</commons-text.version>
        <guava.version>32.1.3-jre</guava.version>
        <datafaker.version>2.0.2</datafaker.version>
        <!--        <lombok.version>1.18.30</lombok.version>-->

        <!-- Spark versions-->
        <spring-boot-starter-spark.version>1.1</spring-boot-starter-spark.version>
        <!-- The Following two versions must be specified otherwise you will get exception java.lang.ClassNotFoundException: javax.servlet.http.HttpServlet-->
        <jakarta-servlet.version>4.0.3</jakarta-servlet.version>
        <jersey.version>2.36</jersey.version>

        <scala.version>2.12.18</scala.version>
        <scala.compact.version>2.12</scala.compact.version>
        <spark.version>3.5.3</spark.version>
        <spark.compact.version>3.5</spark.compact.version>

        <hadoop-aws.version>3.4.1</hadoop-aws.version>
        <spark-connector-mongo.version>10.4.0</spark-connector-mongo.version>
        <spark-connector-kafka.version>0-10</spark-connector-kafka.version>
        <spark-connector-arangodb.version>1.8.0</spark-connector-arangodb.version>
        <arangodb-spring-boot-starter.version>3.3-0</arangodb-spring-boot-starter.version>

        <fmt-maven-plugin.version>2.25</fmt-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.awspring.cloud</groupId>
                <artifactId>spring-cloud-aws-dependencies</artifactId>
                <version>${spring-cloud-aws.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws-java-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>

            <!-- Spark Dependencies -->
            <dependency>
                <groupId>io.github.officiallysingh</groupId>
                <artifactId>spring-boot-starter-spark</artifactId>
                <version>${spring-boot-starter-spark.version}</version>
                <!--                <scope>provided</scope>-->
            </dependency>
            <dependency>
                <groupId>org.mongodb.spark</groupId>
                <artifactId>mongo-spark-connector_${scala.compact.version}</artifactId>
                <version>${spark-connector-mongo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.spark</groupId>
                <artifactId>spark-sql-kafka-${spark-connector-kafka.version}_${scala.compact.version}</artifactId>
                <version>${spark.version}</version>
            </dependency>
            <dependency>
                <groupId>com.arangodb</groupId>
                <artifactId>arangodb-spark-datasource-${spark.compact.version}_${scala.compact.version}</artifactId>
                <version>${spark-connector-arangodb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.arangodb</groupId>
                <artifactId>arangodb-spring-boot-starter</artifactId>
                <version>${arangodb-spring-boot-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.hadoop</groupId>
                <artifactId>hadoop-aws</artifactId>
                <version>${hadoop-aws.version}</version>
            </dependency>
            <!--            <dependency>-->
            <!--                <groupId>org.postgresql</groupId>-->
            <!--                <artifactId>postgresql</artifactId>-->
            <!--                <version>${postgresql.version}</version>-->
            <!--            </dependency>-->

            <!-- Misc Dependencies-->
            <dependency>
                <groupId>io.github.officiallysingh</groupId>
                <artifactId>spring-boot-problem-handler</artifactId>
                <version>${spring-boot-problem-handler.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>net.datafaker</groupId>
                <artifactId>datafaker</artifactId>
                <version>${datafaker.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Misc dependencies -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>net.datafaker</groupId>
            <artifactId>datafaker</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Auto format code during compilation -->
                <plugin>
                    <groupId>com.spotify.fmt</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>${fmt-maven-plugin.version}</version>
                    <!--                <configuration>-->
                    <!--                    <skip>true</skip>-->
                    <!--                </configuration>-->
                    <executions>
                        <execution>
                            <goals>
                                <goal>format</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Auto format code during compilation -->
            <plugin>
                <groupId>com.spotify.fmt</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
